tests/semantic/fail/flow-10.tiger
let
	var a := while 0 do ()
in
end
